--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: myCustomTitle
-description: myCustomAndDetailedDescription
+title: Ifteher Alom
+description: Greetings...
